--- a/neuroscience.html
+++ b/neuroscience.html
@@ -37,7 +37,7 @@
                 
                 <aside class="sidebar">
                     <nav class="sidebar-nav">
-                        <h3>תוכניות לימוד</h3>
+                        <h3><a href="index.html" style="color: inherit; text-decoration: none;">תוכניות לימוד</a></h3>
                         <ul>
                             <li><a href="clinical-english.html">המגמה הקלינית באנגלית</a></li>
                             <li><a href="organizational.html">המגמה הארגונית-תעסוקתית</a></li>
@@ -48,11 +48,17 @@
                     </nav>
                     
                     <nav class="sidebar-nav">
-                        <h3>מידע נוסף</h3>
+                        <h3>תוכן העמוד</h3>
                         <ul>
-                            <li><a href="index.html#admission">קבלה</a></li>
-                            <li><a href="index.html#funding">מימון ומלגות</a></li>
-                            <li><a href="index.html#campus">הקמפוס</a></li>
+                            <li><a href="#why">למה מדעי המוח וקוגניציה?</a></li>
+                            <li><a href="#what">מה לומדים ומה עושים?</a></li>
+                            <li><a href="#labs">מעבדות וציוד מחקרי</a></li>
+                            <li><a href="#faculty">הסגל המלווה</a></li>
+                            <li><a href="#career">לאן ממשיכים מכאן?</a></li>
+                            <li><a href="#scholarships">מלגות והזדמנויות</a></li>
+                            <li><a href="#special">מה מייחד את אריאל?</a></li>
+                            <li><a href="#admission">דרישות קבלה</a></li>
+                            <li><a href="#contact-info">למידע נוסף</a></li>
                         </ul>
                     </nav>
                 </aside>
@@ -65,7 +71,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="why">
                         <h2>למה מדעי המוח וקוגניציה?</h2>
                         <p>
                             איך המוח שלנו קורא את המשפט הזה? איך הוא מבין שפה, מקבל החלטות, זוכר וחווה רגשות? מדעי המוח וקוגניציה 
@@ -78,7 +84,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="what">
                         <h2>מה לומדים ומה עושים?</h2>
                         <p>
                             התכנית כוללת קורסים תיאורטיים לצד עבודה מעשית במעבדות המחלקה.
@@ -96,7 +102,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="labs">
                         <h2>מעבדות וציוד מחקרי</h2>
                         <p>
                             למחלקה ציוד מחקרי מתקדם:
@@ -119,7 +125,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="faculty">
                         <h2>הסגל המלווה</h2>
                         <p>
                             צוות המגמה כולל חוקרים פעילים בתחומי קוגניציה מספרית, עיבוד רגשי, קשב וזיכרון עבודה, קוגניציה חברתית 
@@ -132,7 +138,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="career">
                         <h2>לאן ממשיכים מכאן?</h2>
                         <p>
                             בוגרי התכנית משתלבים במגוון רחב של מסלולי קריירה:
@@ -152,7 +158,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="scholarships">
                         <h2>מלגות והזדמנויות</h2>
                         <p>
                             התכנית מציעה מלגות הצטיינות לסטודנטים מצטיינים, תשלום כעוזרי מחקר המאפשר ניסיון מעשי בפרויקטי מחקר מתקדמים, 
@@ -161,7 +167,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="special">
                         <h2>מה מייחד את אריאל?</h2>
                         <p>
                             המגמה מציעה ליווי אישי וצמוד לאורך כל תקופת הלימודים, קורסים בקבוצות קטנות המאפשרים אינטראקציה ישירה עם 
@@ -175,7 +181,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="admission">
                         <h2>דרישות קבלה</h2>
                         <p>
                             הקבלה למגמה מיועדת למועמדים המחזיקים בתואר ראשון בפסיכולוגיה מאוניברסיטה מוכרת. נדרש ציון ממוצע מינימלי 
@@ -184,7 +190,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="contact-info">
                         <h2>למידע נוסף</h2>
                         <p>
                             למידע מפורט על המגמה, תכנית הלימודים, דרישות הקבלה ומועדי ההרשמה, ניתן לפנות למזכירות המחלקה לפסיכולוגיה 
