--- a/rehabilitation-adults.html
+++ b/rehabilitation-adults.html
@@ -37,7 +37,7 @@
                 
                 <aside class="sidebar">
                     <nav class="sidebar-nav">
-                        <h3>תוכניות לימוד</h3>
+                        <h3><a href="index.html" style="color: inherit; text-decoration: none;">תוכניות לימוד</a></h3>
                         <ul>
                             <li><a href="clinical-english.html">המגמה הקלינית באנגלית</a></li>
                             <li><a href="organizational.html">המגמה הארגונית-תעסוקתית</a></li>
@@ -48,11 +48,18 @@
                     </nav>
                     
                     <nav class="sidebar-nav">
-                        <h3>מידע נוסף</h3>
+                        <h3>תוכן העמוד</h3>
                         <ul>
-                            <li><a href="index.html#admission">קבלה</a></li>
-                            <li><a href="index.html#funding">מימון ומלגות</a></li>
-                            <li><a href="index.html#campus">הקמפוס</a></li>
+                            <li><a href="#overview">תיאור מקוצר</a></li>
+                            <li><a href="#about">פסיכולוגיה שיקומית באריאל</a></li>
+                            <li><a href="#methods">גישות טיפול ושיטות הוראה</a></li>
+                            <li><a href="#practicum">הפרקטיקום</a></li>
+                            <li><a href="#faculty">סגל המגמה ומחקר</a></li>
+                            <li><a href="#special">מה מייחד את המגמה?</a></li>
+                            <li><a href="#adults-track">מסלול המבוגרים</a></li>
+                            <li><a href="#career">הזדמנויות קריירה</a></li>
+                            <li><a href="#admission">דרישות קבלה</a></li>
+                            <li><a href="#contact-info">למידע נוסף</a></li>
                         </ul>
                     </nav>
                 </aside>
@@ -65,7 +72,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="overview">
                         <h2>תיאור מקוצר</h2>
                         <p>
                             ייחודה של המגמה לפסיכולוגיה שיקומית הינה מתן מענה לאוכלוסיות מגוונות בדגש על שני צירים מרכזיים: (א) ציר טיפולי 
@@ -88,7 +95,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="about">
                         <h2>פסיכולוגיה שיקומית באוניברסיטת אריאל</h2>
                         <p>
                             המגמה מיועדת לסטודנטים המבקשים הכשרה מעמיקה בעולם השיקום הפסיכולוגי, תוך שילוב הבנה תיאורטית מעמיקה וגישות 
@@ -106,7 +113,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="methods">
                         <h2>גישות טיפול ושיטות הוראה</h2>
                         <p>
                             המסלול משלב מספר גישות טיפול. לצד הגישה הדינמית וההתבוננות המעמיקה בעולם הפנימי, נלמדת הגישה 
@@ -119,7 +126,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="practicum">
                         <h2>הפרקטיקום</h2>
                         <p>
                             הפרקטיקום במגמה נפרש על שנה, החל מתחילת סמסטר ב' של שנה א'. העבודה המעשית מתבצעת במוסדות המוכרים להתמחות 
@@ -129,7 +136,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="faculty">
                         <h2>סגל המגמה ומחקר</h2>
                         <p>
                             סגל המגמה משלב חוקרים וקלינאים מנוסים בתחום הטיפול. הרכב הסגל משקף חיבור הדוק בין מחקר לשדה, ומאפשר 
@@ -139,7 +146,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="special">
                         <h2>מה מייחד את המגמה השיקומית באריאל?</h2>
                         <p>
                             ייחודיות המגמה היא בהקניה מסודרת ומרוכזת של ידע מעמיק ומתקדם בתחום הטיפול השיקומי ואבחון השיקומי-נוירופסיכולוגי. 
@@ -151,7 +158,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="adults-track">
                         <h2>על מסלול המבוגרים במגמה לפסיכולוגיה שיקומית</h2>
                         <p>
                             הסטודנטים לומדים על סוגיות מרכזיות בפסיכופתולוגיה, הפרעות נוירולוגיות וההשפעות ההדדיות ביניהם. הסטודנטים גם 
@@ -166,7 +173,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="career">
                         <h2>הזדמנויות קריירה</h2>
                         <p>
                             בוגרי המסלול משתלבים במגוון מסגרות שיקומיות המתמחות בעבודה עם מבוגרים וקשישים. אפשרויות התעסוקה כוללות עבודה 
@@ -176,7 +183,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="admission">
                         <h2>דרישות קבלה</h2>
                         <p>
                             הקבלה למסלול מיועדת למועמדים המחזיקים בתואר ראשון בפסיכולוגיה מאוניברסיטה מוכרת. נדרש ציון ממוצע מינימלי 
@@ -185,7 +192,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="contact-info">
                         <h2>למידע נוסף</h2>
                         <p>
                             למידע מפורט על המסלול, תכנית הלימודים, דרישות הקבלה ומועדי ההרשמה, ניתן לפנות למזכירות המחלקה לפסיכולוגיה 
