--- a/rehabilitation-children.html
+++ b/rehabilitation-children.html
@@ -37,7 +37,7 @@
                 
                 <aside class="sidebar">
                     <nav class="sidebar-nav">
-                        <h3>תוכניות לימוד</h3>
+                        <h3><a href="index.html" style="color: inherit; text-decoration: none;">תוכניות לימוד</a></h3>
                         <ul>
                             <li><a href="clinical-english.html">המגמה הקלינית באנגלית</a></li>
                             <li><a href="organizational.html">המגמה הארגונית-תעסוקתית</a></li>
@@ -48,11 +48,17 @@
                     </nav>
                     
                     <nav class="sidebar-nav">
-                        <h3>מידע נוסף</h3>
+                        <h3>תוכן העמוד</h3>
                         <ul>
-                            <li><a href="index.html#admission">קבלה</a></li>
-                            <li><a href="index.html#funding">מימון ומלגות</a></li>
-                            <li><a href="index.html#campus">הקמפוס</a></li>
+                            <li><a href="#children-track">מסלול הילדים</a></li>
+                            <li><a href="#neuropsych">אבחון נוירופסיכולוגי</a></li>
+                            <li><a href="#methods">גישות טיפול ושיטות הוראה</a></li>
+                            <li><a href="#practicum">הפרקטיקום</a></li>
+                            <li><a href="#faculty">סגל המסלול ומחקר</a></li>
+                            <li><a href="#special">מה מייחד את המסלול?</a></li>
+                            <li><a href="#career">תחומי עבודה</a></li>
+                            <li><a href="#admission">דרישות קבלה</a></li>
+                            <li><a href="#contact-info">למידע נוסף</a></li>
                         </ul>
                     </nav>
                 </aside>
@@ -65,7 +71,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="children-track">
                         <h2>מסלול הילדים במגמה לפסיכולוגיה שיקומית</h2>
                         <p>
                             המסלול מיועד לסטודנטים המבקשים הכשרה מעמיקה בעולם השיקום הפסיכולוגי של ילדים ונוער, ולשלב בין הבנה תיאורטית 
@@ -80,7 +86,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="neuropsych">
                         <h2>אבחון נוירופסיכולוגי של ילדים</h2>
                         <p>
                             במהלך הלימודים הסטודנטים רוכשים ידע מעמיק גם באבחון נוירופסיכולוגי של ילדים: אבחון קשיים התפתחותיים, קשיים 
@@ -91,7 +97,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="methods">
                         <h2>גישות טיפול ושיטות הוראה</h2>
                         <p>
                             המסלול משלב מספר גישות טיפול המותאמות לעבודה עם ילדים. לצד הגישה הדינמית וההתבוננות המעמיקה בעולם הפנימי 
@@ -105,7 +111,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="practicum">
                         <h2>הפרקטיקום</h2>
                         <p>
                             הפרקטיקום במסלול נפרש על שנה, החל מתחילת סמסטר ב' של שנה א'. העבודה המעשית מתבצעת במוסדות המוכרים להתמחות 
@@ -120,7 +126,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="faculty">
                         <h2>סגל המסלול ומחקר</h2>
                         <p>
                             סגל המסלול משלב חוקרים וקלינאים מנוסים בתחום השיקום וההתפתחות. הרכב הסגל משקף חיבור הדוק בין מחקר לשדה, 
@@ -134,7 +140,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="special">
                         <h2>מה מייחד את מסלול הילדים?</h2>
                         <p>
                             ייחודיות המסלול היא בהקניה מסודרת ומרוכזת של ידע מעמיק ומתקדם בתחום הטיפול השיקומי של ילדים ואבחון 
@@ -150,7 +156,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="career">
                         <h2>תחומי עבודה והשתלבות מקצועית</h2>
                         <p>
                             בוגרי המסלול מיועדים להשתלב במגוון מסגרות שיקומיות לילדים ונוער, כגון:
@@ -174,7 +180,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="admission">
                         <h2>דרישות קבלה</h2>
                         <p>
                             הקבלה למסלול מיועדת למועמדים המחזיקים בתואר ראשון בפסיכולוגיה מאוניברסיטה מוכרת. נדרש ציון ממוצע מינימלי 
@@ -184,7 +190,7 @@
                         </p>
                     </section>
 
-                    <section class="text-section">
+                    <section class="text-section" id="contact-info">
                         <h2>למידע נוסף</h2>
                         <p>
                             למידע מפורט על המסלול, תכנית הלימודים, דרישות הקבלה ומועדי ההרשמה, ניתן לפנות למזכירות המחלקה לפסיכולוגיה 
