--- a/clinical-english.html
+++ b/clinical-english.html
@@ -112,7 +112,7 @@
                         <p>
                             Admission to the clinical psychology program is highly competitive. Applicants must hold a Bachelor's degree in Psychology 
                             from a recognized university with a minimum grade point average of 85 or equivalent. Standardized test scores are required: 
-                            either a GRE score of 300 or above, or a Meitam score of 100 or higher. Advanced English proficiency is essential, as all 
+                            either a GRE score of 300 or above, or a Mit’am score of 100 or higher. Advanced English proficiency is essential, as all 
                             instruction and clinical supervision are conducted in English.
                         </p>
                         <p>
