--- a/organizational.html
+++ b/organizational.html
@@ -41,7 +41,14 @@
                         <h3><a href="index.html" style="color: inherit; text-decoration: none;">תוכניות לימוד</a></h3>
                         <ul>
                             <li><a href="clinical-english.html">המגמה הקלינית באנגלית</a></li>
-                            <li><a href="organizational.html" class="active">המגמה הארגונית-תעסוקתית</a></li>
+                            <li>
+                                <a href="organizational.html" class="active">המגמה הארגונית-תעסוקתית</a>
+                                <ul style="margin-top: 0.5rem; padding-right: 1rem;">
+                                    <li style="margin-top: 0.3rem;"><a href="organizational-curriculum.html">תוכנית הלימודים</a></li>
+                                    <li style="margin-top: 0.3rem;"><a href="organizational-atid-institute.html">מכון עתיד</a></li>
+                                    <li style="margin-top: 0.3rem;"><a href="organizational-admission.html">תנאי הקבלה והרישום</a></li>
+                                </ul>
+                            </li>
                             <li><a href="rehabilitation-adults.html">המגמה השיקומית - מבוגרים</a></li>
                             <li><a href="rehabilitation-children.html">המגמה השיקומית - ילדים</a></li>
                             <li><a href="neuroscience.html">מגמת מדעי המוח וקוגניציה</a></li>
@@ -116,7 +123,7 @@
                             הנחייה אישית במהלך המחקר וכתיבת עבודת התזה.
                         </p>
                         <p>
-                            <a href="https://www.ariel.ac.il/wp/behavior/organizational/" target="_blank">למידע על הקורסים הנלמדים לחץ כאן</a>
+                            <a href="organizational-curriculum.html">למידע על הקורסים הנלמדים לחץ כאן</a>
                         </p>
                     </section>
 
@@ -147,7 +154,7 @@
                             כמו גם התנסויות שונות דרך שיתופי פעולה במהלך התואר, כגון ייעוץ למועמדים לתואר ראשון בימים הפתוחים.
                         </p>
                         <p>
-                            <a href="https://www.ariel.ac.il/wp/studentsservices/%D7%9E%D7%9B%D7%95%D7%9F-%D7%A2%D7%AA%D7%99%D7%93-%D7%99%D7%99%D7%A2%D7%95%D7%A5-%D7%91%D7%91%D7%97%D7%99%D7%A8%D7%AA-%D7%9C%D7%99%D7%9E%D7%95%D7%93%D7%99%D7%9D-%D7%AA%D7%A2%D7%A1%D7%95%D7%A7%D7%94/" target="_blank">למידע על מכון עתיד לחץ כאן</a>
+                            <a href="atid-institute.html">למידע על מכון עתיד לחץ כאן</a>
                         </p>
                     </section>
 
@@ -186,7 +193,7 @@
                     <section class="text-section" id="admission">
                         <h2>דרישות קבלה</h2>
                         <p>
-                            <a href="https://www.ariel.ac.il/wp/behavior/psychology-ma-admission/" target="_blank">לתנאי הקבלה והרישום לחץ כאן</a>
+                            <a href="admission-requirements.html">לתנאי הקבלה והרישום לחץ כאן</a>
                         </p>
                     </section>
 
