--- a/organizational.html
+++ b/organizational.html
@@ -154,7 +154,7 @@
                             כמו גם התנסויות שונות דרך שיתופי פעולה במהלך התואר, כגון ייעוץ למועמדים לתואר ראשון בימים הפתוחים.
                         </p>
                         <p>
-                            <a href="atid-institute.html">למידע על מכון עתיד לחץ כאן</a>
+                            <a href="organizational-atid-institute.html">למידע על מכון עתיד לחץ כאן</a>
                         </p>
                     </section>
 
@@ -193,7 +193,7 @@
                     <section class="text-section" id="admission">
                         <h2>דרישות קבלה</h2>
                         <p>
-                            <a href="admission-requirements.html">לתנאי הקבלה והרישום לחץ כאן</a>
+                            <a href="organizational-admission.html">לתנאי הקבלה והרישום לחץ כאן</a>
                         </p>
                     </section>
 
