--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
                     <section class="text-section">
                         <h2>המגמה השיקומית</h2>
                         <p>
-                            המגמה השיקומית מספקת הכשרה מעמיקה בשני צירים מרכזיים: ציר טיפולי הכולל גישות פסיכודינמיות וקוגניטיביות-התנהגותיות 
+                            המגמה השיקומית מספקת הכשרה מעמיקה בשני צירים מרכזיים: ציר טיפולי הכולל את גישות פסיכודינמיות וקוגניטיביות-התנהגותיות 
                             כולל גישות הגל השלישי, וציר אבחוני הכולל ידע נוירופסיכולוגי ופסיכודיאגנוסטי רחב. המגמה מציעה שני מסלולים: 
-                            מסלול מבוגרים המתמקד בעבודה עם אוכלוסיית מבוגרים וקשישים (ראש המסלול: ד"ר יורם בראב), ומסלול ילדים המיועד 
-                            להכשרה מעמיקה בשיקום פסיכולוגי של ילדים ונוער (ראש המסלול: ד"ר עמיחי). הפרקטיקום נמשך שנה במוסדות מוכרים 
+                            מסלול מבוגרים המתמקד בעבודה עם אוכלוסיית מבוגרים וקשישים (ראש המסלול: פרופ' יורם בראב), ומסלול ילדים המיועד 
+                            להכשרה מעמיקה בשיקום פסיכולוגי של ילדים ונוער (ראש המסלול: ד"ר עמיחי בן ארי). הפרקטיקום נמשך שנה במוסדות מוכרים 
                             והסטודנטים משתלבים בצוותים רב-מקצועיים. 
                             <a href="rehabilitation-adults.html">למידע מפורט על מסלול המבוגרים</a> | 
                             <a href="rehabilitation-children.html">למידע מפורט על מסלול הילדים</a>
