--- a/rehabilitation-children.html
+++ b/rehabilitation-children.html
@@ -67,7 +67,7 @@
                     
                     <section class="text-section">
                         <p style="text-align: center; font-style: italic; margin-bottom: 2rem; color: #666;">
-                            ראש המסלול: ד"ר עמיחי
+                            ראש המסלול: ד"ר עמיחי בן ארי
                         </p>
                     </section>
 
@@ -114,9 +114,9 @@
                     <section class="text-section" id="practicum">
                         <h2>הפרקטיקום</h2>
                         <p>
-                            הפרקטיקום במסלול נפרש על שנה, החל מתחילת סמסטר ב' של שנה א'. העבודה המעשית מתבצעת במוסדות המוכרים להתמחות 
+                            הפרקטיקום במסלול נפרש על פני שנה, החל מתחילת סמסטר ב' של שנה א'. העבודה המעשית מתבצעת במוסדות המוכרים להתמחות 
                             בפסיכולוגיה שיקומית של ילדים ונוער ברחבי הארץ, תוך השתלבות של הסטודנטים בצוותים רב-מקצועיים והתנסות בטיפול 
-                            במצבי חולי ונכות אצל ילדים, בעבודה מערכתית עם גורמים רפואיים, חינוכיים ורווחתיים, ובביצוע אבחונים 
+                            במצבי חולי ונכות אצל ילדים, בעבודה מערכתית עם גורמים רפואיים, חינוכיים ורווחתיים ובביצוע אבחונים 
                             שיקומיים-נוירופסיכולוגיים התפתחותיים בליווי של הדרכה צמודה.
                         </p>
                         <p>
@@ -135,7 +135,7 @@
                             התפתחות הילד, מרפאות שיקום ילדים, ומסגרות קהילתיות.
                         </p>
                         <p>
-                            שילוב בסיס מחקרי מוצק מאפשר לבוגרים גם להתפתח מבחינה מחקרית, תוך הכנת הקרקע לימודי דוקטורט בפסיכולוגיה 
+                            שילוב בסיס מחקרי מוצק מאפשר לבוגרים גם להתפתח מבחינה מחקרית, תוך הכנת הקרקע ללימודי דוקטורט בפסיכולוגיה 
                             התפתחותית או קלינית והשתלבות עתידית באקדמיה הישראלית.
                         </p>
                     </section>
@@ -184,7 +184,7 @@
                         <h2>דרישות קבלה</h2>
                         <p>
                             הקבלה למסלול מיועדת למועמדים המחזיקים בתואר ראשון בפסיכולוגיה מאוניברסיטה מוכרת. נדרש ציון ממוצע מינימלי 
-                            [להשלים], ציונים במבחני כניסה (מיתם או GRE), רמת אנגלית מסוימת וראיון אישי עם ועדת הקבלה. במהלך הראיון 
+                            [להשלים], ציונים במבחני כניסה (מתא"ם או GRE), רמת אנגלית מסוימת וראיון אישי עם ועדת הקבלה. במהלך הראיון 
                             יבחנו המוטיבציה לעבודה עם ילדים, ההתאמה האישית לעבודה השיקומית, והיכולת לעבוד במסגרות רב-מקצועיות. מועדי 
                             ההגשה והפרטים המדויקים מתפרסמים באתר המחלקה לפסיכולוגיה.
                         </p>
