--- a/rehabilitation-adults.html
+++ b/rehabilitation-adults.html
@@ -68,23 +68,27 @@
                     
                     <section class="text-section">
                         <p style="text-align: center; font-style: italic; margin-bottom: 2rem; color: #666;">
-                            ראש המסלול: ד"ר יורם בראב
+                            ראש המסלול: פרופ' יורם בראב
                         </p>
                     </section>
 
                     <section class="text-section" id="overview">
                         <h2>תיאור מקוצר</h2>
                         <p>
-                            ייחודה של המגמה לפסיכולוגיה שיקומית הינה מתן מענה לאוכלוסיות מגוונות בדגש על שני צירים מרכזיים: (א) ציר טיפולי 
-                            הכולל הכשרה בגישות פסיכודינמיות וגישות קוגניטיביות-התנהגותיות, כולל גישות עדכניות בגישת הגל השלישי (ACT); 
-                            וכן קורסים ייחודיים כדוגמת טיפול בטראומה, טיפול קבוצתי וסוגיות טיפוליות במעגלי שיקום. (ב) ציר אבחוני הכולל 
-                            קורסים תיאורטיים מעמיקים הכוללים תרגול מעשי ויישומי המכשירים את הסטודנטים בידע נוירופסיכולוגי ופסיכודיאגנוסטי 
-                            רחב היקף, כולל יכולת אינטגרציה בין חלקים פסיכו-קוגניטיביים.
+                            ייחודה של המגמה לפסיכולוגיה שיקומית הינה מתן מענה לאוכלוסיות מגוונות בדגש על שני צירים מרכזיים:
+                        </p>
+                        <p>
+                            <strong>(א) ציר טיפולי</strong> – הכולל הכשרה בגישות פסיכודינמיות וגישות קוגניטיביות-התנהגותיות, כולל גישות 
+                            עדכניות בגישת הגל השלישי (ACT); וכן קורסים ייחודיים כדוגמת טיפול בטראומה, טיפול קבוצתי וסוגיות טיפוליות במעגלי שיקום.
+                        </p>
+                        <p>
+                            <strong>(ב) ציר אבחוני</strong> – הכולל קורסים תיאורטיים מעמיקים הכוללים תרגול מעשי ויישומי המכשירים את הסטודנטים 
+                            בידע נוירופסיכולוגי ופסיכודיאגנוסטי רחב היקף, כולל יכולת אינטגרציה בין חלקים פסיכו-קוגניטיביים.
                         </p>
                         <p>
                             ההכשרה במגמה מקנה מיומנויות וידע שיקומי נרחב המאפשרים ביצוע התערבויות ממוקדות וקצרות, כמו גם טיפולים ארוכי 
                             טווח ומעמיקים. מטרתם לאפשר למטופלים למצות את הפוטנציאל הנפשי שלהם לצד הנכות ו/או המוגבלות הנפשית או הפיזית 
-                            ולשוב לתפקוד אופטימאלי במישור האישי, המשפחתי, החברתי והתעסוקתי. התוכנית מכשירה מטפלים להרחיב את יכולת 
+                            ולשוב לתפקוד אופטימלי במישור האישי, המשפחתי, החברתי והתעסוקתי. התוכנית מכשירה מטפלים להרחיב את יכולת 
                             ההסתכלות של האדם הפגוע אל המשאבים העומדים לרשותו על מנת שיוכל לחזור ולהשתלב בחברה.
                         </p>
                         <p>
@@ -129,9 +133,9 @@
                     <section class="text-section" id="practicum">
                         <h2>הפרקטיקום</h2>
                         <p>
-                            הפרקטיקום במגמה נפרש על שנה, החל מתחילת סמסטר ב' של שנה א'. העבודה המעשית מתבצעת במוסדות המוכרים להתמחות 
+                            הפרקטיקום במגמה נפרש על פני שנה, החל מתחילת סמסטר ב' של שנה א'. העבודה המעשית מתבצעת במוסדות המוכרים להתמחות 
                             בפסיכולוגיה שיקומית ברחבי הארץ, תוך השתלבות של הסטודנטים בצוותים רב-מקצועיים והתנסות בטיפול במצבי חולי ונכות, 
-                            בעבודה מערכתית עם גורמים רפואיים, ובביצוע אבחונים שיקומיים-נוירופסיכולוגיים בליווי של הדרכה צמודה. במקביל, הם 
+                            בעבודה מערכתית עם גורמים רפואיים ובביצוע אבחונים שיקומיים-נוירופסיכולוגיים בליווי של הדרכה צמודה. במקביל, הם 
                             מקבלים במסגרת האוניברסיטה הדרכה מקצועית בקורס ייעודי בקבוצות קטנות שמאפשרת תהליכי עיבוד ולמידה מעמיקה.
                         </p>
                     </section>
@@ -142,14 +146,14 @@
                             סגל המגמה משלב חוקרים וקלינאים מנוסים בתחום הטיפול. הרכב הסגל משקף חיבור הדוק בין מחקר לשדה, ומאפשר 
                             לסטודנטים להשתלב גם בפרויקטים מחקריים בתחום שיקום פגיעות גופניות ומוחיות. הכשרה איכותית זו מאפשרת לבוגרי 
                             המסלול להשתלב במגוון מסגרות שיקומיות, כגון מחלקות בבתי חולים ומרפאות. שילוב בסיס מחקרי מוצק מאפשר לבוגרים 
-                            גם להתפתח מבחינה מחקרית, תוך הכנת הקרקע לימודי דוקטורט והשתלבות עתידית באקדמיה הישראלית.
+                            גם להתפתח מבחינה מחקרית, תוך הכנת הקרקע ללימודי דוקטורט והשתלבות עתידית באקדמיה הישראלית.
                         </p>
                     </section>
 
                     <section class="text-section" id="special">
                         <h2>מה מייחד את המגמה השיקומית באריאל?</h2>
                         <p>
-                            ייחודיות המגמה היא בהקניה מסודרת ומרוכזת של ידע מעמיק ומתקדם בתחום הטיפול השיקומי ואבחון השיקומי-נוירופסיכולוגי. 
+                            ייחודיות המגמה היא בהקניה מסודרת ומרוכזת של ידע מעמיק ומתקדם בתחום הטיפול השיקומי ובתחום האבחון השיקומי-נוירופסיכולוגי. 
                             התוכנית מציעה שיטות טיפול עדכניות ומבוססות מחקר שיכולות לתת מענה לבעיות ולצרכים הרלוונטיים שעולים מהשטח. היא 
                             מקנה לסטודנטים את הידע והיכולת לעבוד בתחומים מגוונים, כולל עבודה עם אוכלוסייה המתמודדת עם מצבי חולי ומשבר, 
                             מחלות כרוניות, פגיעות מוחיות, הפרעות נוירולוגיות, מוגבלות ונכות. בנוסף, התוכנית מספקת לסטודנטים ידע מעמיק 
@@ -187,7 +191,7 @@
                         <h2>דרישות קבלה</h2>
                         <p>
                             הקבלה למסלול מיועדת למועמדים המחזיקים בתואר ראשון בפסיכולוגיה מאוניברסיטה מוכרת. נדרש ציון ממוצע מינימלי 
-                            [להשלים], ציונים במבחני כניסה (מיתם או GRE), רמת אנגלית מסוימת וראיון אישי עם ועדת הקבלה. מועדי ההגשה 
+                            [להשלים], ציונים במבחני כניסה (מתא"ם או GRE), רמת אנגלית מסוימת וראיון אישי עם ועדת הקבלה. מועדי ההגשה 
                             והפרטים המדויקים מתפרסמים באתר המחלקה לפסיכולוגיה.
                         </p>
                     </section>
@@ -196,7 +200,7 @@
                         <h2>למידע נוסף</h2>
                         <p>
                             למידע מפורט על המסלול, תכנית הלימודים, דרישות הקבלה ומועדי ההרשמה, ניתן לפנות למזכירות המחלקה לפסיכולוגיה 
-                            או לבקר באתר האוניברסיטה. ראש המסלול, ד"ר יורם בראב, זמין לשאלות ולהבהרות בנוגע לתכנית.
+                            או לבקר באתר האוניברסיטה. ראש המסלול, פרופ' יורם בראב, זמין לשאלות ולהבהרות בנוגע לתכנית.
                         </p>
                     </section>
 
