--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 </div>
                                 <div class="program-info">
                                     <h3>המגמה השיקומית - מסלול מבוגרים</h3>
-                                    <p class="program-director">ראש המסלול: ד"ר יורם בראב</p>
+                                    <p class="program-director">ראש המסלול: פרופ' יורם בראב</p>
                                 </div>
                             </a>
                         </div>
@@ -148,7 +148,7 @@
                                 </div>
                                 <div class="program-info">
                                     <h3>המגמה השיקומית - מסלול ילדים</h3>
-                                    <p class="program-director">ראש המסלול: ד"ר עמיחי</p>
+                                    <p class="program-director">ראש המסלול: ד"ר עמיחי בן ארי</p>
                                 </div>
                             </a>
                         </div>
